package profile;
syntax = "proto3";

message Profile {
  message Ad {
    AdKey key = 1;
    string cid = 2;
    string votingAddress = 3;
  }
  repeated Ad ads = 1;
}

message AdContent {
  string id = 1;
  string title = 2;
  string url = 3;
  bytes cover = 4;
  string author = 5;
}

message AdKey {
  string location = 1;
  string language = 2;
  int32 age = 3;
  string os = 4;
  int32 stake = 5;
}